Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-23068

RegExpValidator not working with TextInput

XMLWordPrintable

    • cd9103f7f2514b6380aa460ac9d6454e132be307

      // import QtQuick 1.0 // to target S60 5th Edition or Maemo 5
      import QtQuick 1.1
      
      Rectangle {
      	width: 360
      	height: 360
      	TextInput {
      		anchors.centerIn: parent
      		text: "Hello World"
      		validator: RegExpValidator { regExp: ".*" }
      	}
      	MouseArea {
      		anchors.fill: parent
      		onClicked: {
      			Qt.quit();
      		}
      	}
      }
      

      results in the error:
      file:///Users/darke/Code/tmp/tiregexp/tiregexp.qml:10:40: Invalid property assignment: unsupported type "QRegExp"
      validator: RegExpValidator

      { regExp: ".*" }


      ^

      As far as I know this is valid.

        For Gerrit Dashboard: QTBUG-23068
        # Subject Branch Project Status CR V

            chriadam Christopher Adams (closed Nokia identity) (Inactive)
            patburke Patrick Burke (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes