Improve QRegExp property literal assignment error message

Previously, the error message given when a string literal was assigned
to a regular expression property was not very helpful.  This commit
adds a better error message.

Task-number: QTBUG-23068
Change-Id: Ia57b6434b9cdf009429e7b55edab4ab5c2b91c2a
Reviewed-by: Michael Brasser <michael.brasser@nokia.com>
Reviewed-by: Robin Burchell <robin+qt@viroteck.net>